# live-room-sensor

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  cfg.toml.example  rp2040_clion.cfg  rust-toolchain.toml
.cargo/: config.toml
src/: bluetooth_spp.c  config.rs  heartbeat.rs  http.rs  https.c  main.c  main.rs  micradar.c  minewsemi_radar.c  multi_printf.c  picohttps.c  pir_sensor.c  pir_sensor.rs  reporting.c  reset.c  sensor_controller.c  sensor_status.rs  wifi.rs
src/include/: bluetooth_spp.h  https.h  lwipopts.h  mbedtls_config.h  micradar.h  minewsemi_radar.h  multi_printf.h  picohttps.h  pir_sensor.h  reporting.h  reset.h  sensor_controller.h  version.h  wifi.h
