[package]
name = "live-room-sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"

defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-executor = { version = "0.5.0", features = [
    "task-arena-size-65536",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", features = ["defmt", "time-driver"] }
embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "udp", "dns","dhcpv4", "medium-ethernet"] }
embassy-net-driver-channel = { version = "0.2.0"}
defmt = "0.3"
cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-hal = { version = "1.0.0" }
reqwless = { version = "0.11.0", features = ["defmt", "alloc"] }
toml-cfg = "0.2.0"
embassy-sync = { version = "0.5.0", features = ["defmt"] }
futures = {version = "0.3", default-features = false}
hex = {version = "0.4.3",default-features = false}
serde = {version = "1.0.197",default-features = false, features = ["derive"]}
serde-json-core = {version = "0.5"}
fixedstr ={ version = "0.5", features = ["no-alloc", "serde"] }